--- a/src/pages/tour/tour.css
+++ b/src/pages/tour/tour.css
@@ -1,6 +1,3 @@
-.tour-container {
-  height: auto;
-}
 .tour-header {
   display: flex;
   flex-direction: column;
@@ -84,23 +81,13 @@
 }
 
 .tour-nav {
+  position: sticky;
+  top: 0;
   background-color: white;
   color: black;
 
   width: 100%;
   padding: 1rem 0;
-}
-.sticky {
-  position: fixed;
-  box-shadow: var(--shadow-elevation-medium);
-  width: 100%;
-  z-index: 99;
-  top: 0;
-}
-.stickycal {
-  position: fixed;
-  box-shadow: var(--shadow-elevation-medium);
-  top: 85px;
 }
 .tour-nav-wrapper ul {
   display: flex;
@@ -146,9 +133,9 @@
 }
 .singletour-data {
   display: flex;
-  gap: 3rem;
-  padding-top: 2rem;
+  justify-content: space-between;
   padding-bottom: 2rem;
+  padding-top: 2rem;
 }
 .tour-desc-price-details-cancelation {
   width: 65%;
@@ -215,6 +202,7 @@
   padding-bottom: 15px !important;
   display: grid;
   grid-template-columns: 160px 1fr;
+  gap: 1rem;
   background-image: url(/dashmine.png);
   background-repeat: repeat-x;
   background-position: top;
@@ -310,11 +298,44 @@
 }
 
 /* Date picker */
-.date-selector {
-  width: 100%;
-  border-radius: 5px;
+.contentBox {
+  position: relative;
+  z-index: -1;
 }
-.content {
-  height: 100px;
-  width: 330px;
+.stickybox {
+  background-color: black;
+  width: 200px;
+  height: 200px;
+  position: sticky;
+  top: 100px;
+  bottom: 100px;
+  transition: all 0.2s ease;
+}
+
+.more-info strong {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.more-info ul li {
+  margin-left: 1rem;
+  font-weight: 400;
+}
+.more-title {
+  display: flex;
+}
+.stack {
+  display: flex;
+  align-items: start;
+}
+.stack strong {
+  display: flex;
+}
+.qa {
+  display: flex;
+  flex-direction: column;
+}
+.qa span {
+  display: flex;
+  gap: 1rem;
 }
