--- a/src/pages/tour/tour.css
+++ b/src/pages/tour/tour.css
@@ -198,7 +198,7 @@
 .more-info {
   margin-bottom: 0 !important;
   padding-top: 15px !important;
-  padding-bottom: 15px !important;
+  padding-bottom: 7.5px !important;
   display: grid;
   grid-template-columns: 160px 1fr;
   gap: 1rem;
@@ -302,13 +302,12 @@
   z-index: -1;
 }
 .stickybox {
-  background-color: black;
-  width: 200px;
+  background-color: white;
+  border-radius: 5px;
+  min-width: 350px;
   height: 200px;
   position: sticky;
   top: 100px;
-  bottom: 100px;
-  transition: all 0.2s ease;
 }
 
 .more-info strong {
@@ -323,18 +322,21 @@
 .more-title {
   display: flex;
 }
-.stack {
-  display: flex;
-  align-items: start;
-}
-.stack strong {
-  display: flex;
-}
+
 .qa {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
 }
 .qa span {
   display: flex;
+  align-items: start;
   gap: 1rem;
+}
+.qa strong {
+  display: flex;
+  align-items: center;
+}
+.more-info span {
+  text-wrap: balance;
 }
