Add text shadow maindest

--- a/src/pages/home/sections/maindestinations/maindestinations.css
+++ b/src/pages/home/sections/maindestinations/maindestinations.css
@@ -35,6 +35,7 @@
 }
 .maindestination_title {
   padding: 20px;
+  text-shadow: black 2px 2px 4px;
 }
 .maindestination_title h3 {
   font-family: 'montserrat', sans-serif;
