--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -125,11 +125,11 @@
 .footer_block.socials a {
   color: white;
   padding: 0.5rem;
-  border-radius: 50%;
+  border-radius: 5px;
+  transition: all 0.1s ease-in-out;
 }
 .socials a:hover {
-  background-color: white;
-  color: var(--dark-color);
+  background-color: var(--main-color);
 }
 .socials a {
   display: flex;
