--- a/src/pages/country/country.css
+++ b/src/pages/country/country.css
@@ -1,11 +1,80 @@
 .country {
-  min-height: 700px;
+  min-height: 1000px;
+}
+
+.country_header_main {
+  min-height: 600px;
   height: 25vh;
 }
-.country_content {
-  background: url(/header-bg.webp);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.country_header_content {
   height: 60%;
+  position: relative;
+}
+.headerImg {
+  width: 100%;
+  height: 360px;
+  object-fit: cover;
+  position: absolute;
+  z-index: -1;
+}
+.country_header {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-between;
+}
+.country_header-title {
+  padding-top: 4rem;
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  z-index: 2;
+}
+.country_header footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+  height: 30%;
+  width: 100%;
+  padding-bottom: 0.5rem;
+}
+
+.country_header h1 {
+  font-size: 80px;
+  color: white;
+  text-shadow: rgba(0, 0, 0, 0.648) 2px 2px 7px;
+}
+.country_header h2 {
+  font-size: 42px;
+  font-weight: 800;
+  color: white;
+}
+.country_content h2 {
+  font-weight: 300;
+  font-size: 40px;
+}
+.country_content {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 2rem;
+}
+.country_header span {
+  color: white;
+}
+.country_blackoverlay {
+  background-image: linear-gradient(
+    to top,
+    rgb(0 0 0 / 50%) 1%,
+    transparent 40%
+  );
+  content: '';
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
 }
