--- a/src/index.css
+++ b/src/index.css
@@ -148,8 +148,10 @@ small {
 html {
   scroll-padding-top: var(--scroll-padding, 70px);
   scroll-behavior: smooth;
+  overflow-x: clip;
 }
 body {
+  overflow-x: clip;
   max-width: 100vw;
   background-color: #e1ecff;
 }
