--- a/src/pages/country/country.css
+++ b/src/pages/country/country.css
@@ -1,8 +1,8 @@
 .country_header {
-  min-height: 30vh;
+  min-height: 35vh;
   position: relative;
 }
-.headerImg {
+.header-Img {
   object-fit: cover;
   object-position: center;
   position: absolute;
@@ -10,19 +10,25 @@
   left: 0;
   z-index: -10;
 }
+.country_header img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+}
 
 .country_intro {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  min-height: 35vh;
 }
-.country_title {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
+
 .country_title h1 {
   font-size: 80px;
   color: white;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   text-shadow: rgba(0, 0, 0, 0.541) 2px 2px 10px;
 }
 .country_details {
@@ -51,4 +57,5 @@
   height: 100%;
   width: 100%;
   z-index: 0;
+  min-height: 35vh;
 }
