--- a/src/pages/city/city.css
+++ b/src/pages/city/city.css
@@ -1,69 +1,52 @@
-.city {
-  min-height: 1000px;
-}
-
-.city_header_main {
-  min-height: 600px;
-  height: 25vh;
-}
-.city_header_content {
-  height: 60%;
+.city_header {
+  min-height: 35vh;
   position: relative;
 }
-.headerImg {
-  width: 100%;
-  height: 340px;
+.header-Img {
   object-fit: cover;
+  object-position: top;
   position: absolute;
-  z-index: -1;
+  top: 0;
+  left: 0;
+  z-index: -10;
 }
-.city_header {
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  justify-content: space-between;
-}
-.city_header-title {
-  padding-top: 4rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
-  align-items: start;
-  z-index: 2;
-}
-.city_header footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: end;
-  height: 30%;
+.city_header img {
+  height: 100%;
   width: 100%;
-  padding-bottom: 0.5rem;
+  object-fit: cover;
+  object-position: center;
 }
 
-.city_header h1 {
+.city_intro {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 35vh;
+}
+.city_title {
+  padding-top: 5rem;
+  padding-bottom: 2rem;
+}
+.city_title h1 {
   font-size: 80px;
   color: white;
-  text-shadow: rgba(0, 0, 0, 0.648) 2px 2px 7px;
+
+  text-shadow: rgba(0, 0, 0, 0.541) 2px 2px 10px;
 }
-.city_header h2 {
-  font-size: 42px;
-  font-weight: 800;
+.city_details {
+  display: flex;
+  justify-content: space-between;
   color: white;
+  padding-bottom: 1rem;
+  z-index: 1;
 }
-.city_content h2 {
-  font-weight: 300;
-  font-size: 40px;
+.city_details h2 {
+  font-weight: 800;
+  font-size: 2.5rem;
 }
 .city_content {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  padding-top: 1rem;
-}
-.city_header span {
-  color: white;
+  min-height: 100%;
+  padding-bottom: 2rem;
 }
 .city_blackoverlay {
   background-image: linear-gradient(
@@ -73,14 +56,18 @@
   );
   content: '';
   position: absolute;
-  top: 0;
   height: 100%;
   width: 100%;
-  z-index: -1;
+  z-index: 0;
+  min-height: 35vh;
 }
 .tags small {
   background-color: white;
   border-radius: 5px;
   padding: 5px 22px;
   color: black;
+}
+.city_content {
+  height: 100vh;
+  padding-top: 1rem;
 }
