--- a/src/pages/home/sections/maindestinations/maindestinations.css
+++ b/src/pages/home/sections/maindestinations/maindestinations.css
@@ -20,7 +20,7 @@
   gap: 1rem;
 }
 .maindestinations_grid > * {
-  flex: 1 1 30%;
+  flex: 0 0 32%;
 }
 /* .list_card-item {
   flex-basis: 30%;
@@ -29,7 +29,6 @@
 } */
 .list_card-item {
   min-width: 140px;
-  min-height: 180px;
   max-height: 230px;
 }
 .maindestinations_card {
@@ -58,7 +57,7 @@
 .maindestinations_card img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: fit-content;
   object-position: center;
   position: absolute;
   top: 0;
@@ -104,7 +103,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 1rem;
+  padding-top: 3rem;
 }
 
 .showmore_button button {
