--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@
   --dark-color: rgb(12, 27, 51);
   --warning-color: #ebebeb;
 
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
   font-weight: 300;
 
   font-synthesis: none;
@@ -114,31 +116,44 @@
   text-decoration: none;
 }
 h1 {
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
   font-weight: 800;
   font-size: 36px;
+  font-display: swap;
 }
 h2 {
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
   font-weight: 500;
   font-size: clamp(1rem, 5vw, 2rem);
 }
 h3 {
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
   font-weight: 800;
   font-size: clamp(1rem, 2vw, 1.4rem);
 }
 p {
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
   font-weight: 400;
   font-size: clamp(0.8rem, 5vw, 1rem);
 }
 span {
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
   font-weight: 400;
 }
 strong {
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
   font-weight: 900;
 }
 small {
@@ -174,7 +189,6 @@ body {
   font-size: 0.8rem;
   padding: 0 1.25rem 0 1.875rem;
   display: block;
-  white-space: nowrap;
 }
 ::selection {
   color: white;
