--- a/src/pages/home/sections/maindestinations/maindestinations.css
+++ b/src/pages/home/sections/maindestinations/maindestinations.css
@@ -17,6 +17,7 @@
   flex-wrap: wrap;
   justify-content: center;
   padding-top: 2rem;
+  padding-bottom: 5rem;
   gap: 1rem;
 }
 .maindestinations_grid > * {
@@ -54,16 +55,17 @@
   position: absolute;
   bottom: 10px;
 }
-.maindestinations_card img {
-  width: 100%;
-  height: 100%;
-  object-fit: fit-content;
-  object-position: center;
+.maindestinations_card > img {
   position: absolute;
   top: 0;
   left: 0;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 5px;
   transition: 0.5s ease;
 }
+
 .maindestinations_card:hover .maindestination_title h3 {
   top: 30px;
 }
