--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -77,6 +77,7 @@
   position: absolute;
   opacity: 0;
   visibility: hidden;
+  translate: 0 -10px;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -91,6 +92,7 @@
   min-width: 18.75rem;
 }
 .language-visible {
+  translate: 0;
   opacity: 1;
   visibility: visible;
 }
