Fix Slider component and add filter options in City page

--- a/src/pages/city/city.css
+++ b/src/pages/city/city.css
@@ -90,10 +90,14 @@
   gap: 2rem;
 }
 .city_content-sidebar {
+  padding: 1rem;
   width: 25%;
   height: 600px;
   background-color: white;
   border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 .city_content-cards {
   width: 75%;
@@ -178,4 +182,38 @@
   background-color: white;
   padding: 0.5rem;
   border-radius: 5px;
+}
+.category_list-item{
+  display: flex;
+  gap: 5px;
+}
+.category_list-item label{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  cursor: pointer;
+  user-select: none;
+}
+.features_list-item label{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  cursor: pointer;
+  user-select: none;
+}
+.category h4{
+  margin-bottom: 0.5rem;
+}
+.features h4{ 
+  margin-bottom: 0.5rem;
+}
+.price h4{ 
+  margin-bottom: 0.5rem;
+}
+.price input{
+  width: 100%;
+}
+.price input{
+  color: red;
+  background-color: red;
 }
