--- a/src/pages/tour/tour.css
+++ b/src/pages/tour/tour.css
@@ -254,7 +254,7 @@
   gap: 1rem;
 }
 .tour-reviews-customers {
-  padding-bottom: 2rem;
+  margin-bottom: 10rem;
 }
 .tour-reviewnumbers {
   background-color: white;
