--- a/src/index.css
+++ b/src/index.css
@@ -137,6 +137,7 @@ p {
     sans-serif;
   font-weight: 400;
   font-size: clamp(0.8rem, 5vw, 1rem);
+  margin-bottom: 2rem;
 }
 span {
   font-family: 'Montserrat';
