--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -275,7 +275,7 @@
 .booking-tab {
   width: 50%;
   padding: 2rem;
-  background-color: var(--warning-color);
+  background-color: #ebebeb;
   border-end-end-radius: 5px;
   border-end-start-radius: 5px;
 }
@@ -344,6 +344,22 @@
 .loggedInUser:hover{
   background-color: #050b14d2;
   border-radius: 5px;
+}
+.errormessage{
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+.error-message-wrapper{
+  width: 100%;
+  padding: 20px 10px;
+  background-color: var(--warning-color);
+  margin-bottom: 1rem;
+  text-align: center;
+  color: white;
+
 }
 
 @media (width <= 1024px) {
