--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   --secondary-color: rgb(4, 113, 166);
   --opaque-color: rgb(54, 133, 181);
   --dark-color: rgb(12, 27, 51);
-  --warning-color: #ebebeb;
+  --warning-color: rgb(252, 208, 161);
 
   font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
@@ -147,7 +147,7 @@ strong {
   font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
     sans-serif;
-  font-weight: 900;
+  font-weight: 700;
 }
 small {
   font-size: 13px;
