--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -172,6 +172,48 @@
   opacity: 0.5;
   cursor: pointer;
 }
+/* User Menu dropdown */
+.userMenu {
+  position: relative;
+}
+.dropdown-userMenu {
+  position: absolute;
+  display: flex;
+  background-color: white;
+  translate: 0 -10px;
+  right: 0;
+  opacity: 0;
+  visibility: hidden;
+  min-width: 300px;
+  color: var(--dark-color);
+  border-end-end-radius: 5px;
+  border-end-start-radius: 5px;
+  box-shadow: var(--shadow-elevation-medium);
+  transition-property: opacity;
+  transition: 0.2s ease-out;
+  padding: 2rem;
+}
+.userMenu-content{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  justify-content: space-between;
+}
+.userMenu-header{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+.userbuttons{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+}
 
 /* Login dropdown */
 .login {
@@ -251,6 +293,29 @@
   transition: 0.2s ease;
 }
 .loginBtn button:hover {
+  background-color: var(--main-color);
+  border: 1px solid var(--dark-color);
+}
+.logoutBtn {
+  display: flex;
+  justify-content: start;
+  width: 100%;
+}
+.logoutBtn button {
+  padding: 7px 42px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  width: 100%;
+  border: 1px solid rgb(212, 212, 212);
+  border-radius: 5px;
+  background: none;
+  background-color: var(--dark-color);
+  color: white;
+  cursor: pointer;
+  transition: 0.2s ease;
+}
+.logoutBtn button:hover {
   background-color: var(--main-color);
   border: 1px solid var(--dark-color);
 }
@@ -373,7 +438,6 @@
   cursor: pointer;
 }
 .loggedInUser:hover{
-  background-color: #050b14d2;
   border-radius: 5px;
 }
 .errormessage{
