Refactor Navbar component and CSS
This commit refactors the Navbar component by removing unnecessary event.preventDefault() calls and optimizing the handling of state variables. It also updates the CSS transition property for smoother animations.

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -357,7 +357,7 @@
   padding: 3rem;
   right: 0;
   box-shadow: var(--shadow-elevation-medium);
-  transition: all 0.1s ease-in-out;
+  transition: 0.1s ease-in;
   min-width: 18.75rem;
 }
 .visible-cart{
