--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -371,9 +371,10 @@
 .booking-tab {
   width: 50%;
   padding: 2rem;
-  background-color: #ebebeb;
+  background-color: #fff;
   border-end-end-radius: 5px;
   border-end-start-radius: 5px;
+  border-right: 1px dashed var(--main-color);
 }
 .booking-tab h4 {
   font-size: 1.5rem;
