--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -193,20 +193,20 @@
   transition: 0.2s ease-out;
   padding: 2rem;
 }
-.userMenu-content{
+.userMenu-content {
   display: flex;
   flex-direction: column;
   gap: 1rem;
   width: 100%;
   justify-content: space-between;
 }
-.userMenu-header{
+.userMenu-header {
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: start;
 }
-.userbuttons{
+.userbuttons {
   height: 100%;
   width: 100%;
   display: flex;
@@ -350,7 +350,7 @@
 }
 
 /* cart tab */
-.cart{
+.cart {
   position: relative;
 }
 .dropdown-cart {
@@ -372,12 +372,11 @@
   transition: 0.1s ease-in;
   min-width: 18.75rem;
 }
-.visible-cart{
+.visible-cart {
   translate: 0;
   opacity: 1;
   visibility: visible;
 }
-
 
 /* Booking Tab */
 .booking-tab {
@@ -440,7 +439,7 @@
   border: 1px solid var(--dark-color);
 }
 
-.loggedInUser{
+.loggedInUser {
   height: 100%;
   display: flex;
   align-items: center;
@@ -450,23 +449,23 @@
   padding-left: 1rem;
   cursor: pointer;
 }
-.loggedInUser:hover{
+.loggedInUser:hover {
   border-radius: 5px;
 }
-.errormessage{
+.errormessage {
   width: 100%;
   height: 100%;
   padding: 10px;
   font-size: 1.2rem;
   font-weight: 600;
 }
-.error-message-wrapper{
+.error-message-wrapper {
   width: 100%;
   padding: 20px 10px;
-  background-color: var(--warning-color);
+  background-color: #ed4337;
+  color: white;
   margin-bottom: 1rem;
   text-align: center;
-
 }
 
 @media (width <= 1024px) {
