Update justify-content in maindestinations_header

--- a/src/pages/home/sections/maindestinations/maindestinations.css
+++ b/src/pages/home/sections/maindestinations/maindestinations.css
@@ -7,7 +7,7 @@
 }
 .maindestinations_header {
   display: flex;
-  justify-content: start;
+  justify-content: center;
 }
 
 .maindestinations_grid {
