Update justify-content in toptours_header

--- a/src/pages/home/sections/toptours/toptours.css
+++ b/src/pages/home/sections/toptours/toptours.css
@@ -12,7 +12,7 @@
 }
 .toptours_header {
   display: flex;
-  justify-content: start;
+  justify-content: center;
   align-items: center;
   padding-top: 2rem;
   width: 100%;
