--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 :root {
-  --main-color: rgb(137, 170, 230);
-  --secondary-color: rgb(4, 113, 166);
-  --opaque-color: rgb(54, 133, 181);
-  --dark-color: rgb(12, 27, 51);
-  --warning-color: rgb(188, 231, 132);
+  --main-color: rgb(1, 151, 238);
+  --secondary-color: rgb(237, 201, 255);
+  --opaque-color: rgb(40, 61, 59);
+  --dark-color: rgb(10, 9, 8);
+  --warning-color: rgb(148, 251, 171);
 
   font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
@@ -99,7 +99,6 @@
   font-display: swap;
 }
 
-
 *,
 *::before,
 *::after {
@@ -178,10 +177,13 @@ body {
 .a-light {
   line-height: 140%;
   font-weight: 600;
-  color: var(--secondary-color);
+  color: var(--main-color);
   font-size: 0.8rem;
   padding: 0 1.25rem 0 1.875rem;
   display: block;
+}
+.a-light:hover {
+  color: var(--opaque-color);
 }
 ::selection {
   color: white;
