Add fix Responsive

--- a/src/pages/home/sections/maindestinations/maindestinations.css
+++ b/src/pages/home/sections/maindestinations/maindestinations.css
@@ -148,6 +148,17 @@
     padding-left: 10px;
     padding-right: 10px;
   }
+  .maindestinations_grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 2rem;
+    padding-bottom: 10rem;
+    gap: 1rem 1rem;
+  }
+  .maindestinations_grid > * {
+    flex: 0 0 42%;
+  }
 }
 @media (width > 1000px) {
   .maindestinations_card {
