--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 :root {
-  --main-color: rgb(1, 151, 238);
-  --secondary-color: rgb(237, 201, 255);
+  --main-color: #0197ee;
+  --secondary-color: #edc9ff;
   --opaque-color: rgb(40, 61, 59);
-  --dark-color: rgb(10, 9, 8);
+  --dark-color: #0a0908;
   --warning-color: rgb(148, 251, 171);
 
   font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
