--- a/src/components/navbarMobile/navbarmobile.css
+++ b/src/components/navbarMobile/navbarmobile.css
@@ -2,6 +2,10 @@
   display: none;
   visibility: hidden;
 }
+.login_mobile {
+  display: none;
+  visibility: hidden;
+}
 
 @media (width <= 500px) {
   .logonav {
@@ -35,6 +39,7 @@
 
   .navbarmobile button {
     position: absolute;
+    display: flex;
     left: 1.5rem;
     bottom: 29px;
     z-index: 99999;
@@ -92,17 +97,17 @@
     justify-content: space-between;
     padding: 1rem 1.5rem;
     color: white;
-    border-bottom: 1px dashed rgba(255, 255, 255, 0.274);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.055);
     cursor: pointer;
   }
 
   .mobilenav li:hover {
-    background-color: var(--main-color);
-    color: var(--opaque-color);
+    background-color: var(--opaque-color);
+    color: #fff;
   }
 
   li:hover .iconsvg {
-    color: var(--opaque-color);
+    color: #fff;
   }
 
   .mobilenav span {
@@ -112,9 +117,154 @@
   .lidropdown {
     flex-grow: 2;
     background-color: var(--main-color);
+    user-select: none;
+    pointer-events: none;
   }
 
   .dropdown-dark {
     background-color: var(--main-color);
+  }
+  .login_mobile {
+    display: block;
+    visibility: hidden;
+  }
+  .header_wrapper-nav {
+    height: 78.42px;
+    padding: 0.5rem 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--dark-color);
+    color: white;
+  }
+  .header_wrapper-nav button {
+    border: none;
+    background: none;
+    display: flex;
+  }
+  .login_mobile-fullscreen {
+    position: fixed;
+    z-index: 99999999;
+    height: 100vh;
+    width: 100vw;
+    opacity: 0;
+    visibility: hidden;
+    background-color: white;
+    height: 100vh;
+    width: 100vw;
+  }
+  .login_visible {
+    visibility: visible;
+    opacity: 1;
+  }
+  .login_content-container {
+    padding: 2rem 1.5rem;
+  }
+  .login_mobile-form {
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+  .login_mobile-form input {
+    padding: 0.65rem 1rem;
+    border: 1px solid #cccccc;
+    background-color: #f8f8f8;
+    border-radius: 5px;
+    font-size: 16px;
+    font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
+      'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+      'Helvetica Neue', sans-serif;
+    width: 100%;
+  }
+
+  .login_mobile-form input:focus {
+    outline: 1px solid var(--main-color);
+  }
+
+  .login_mobile-form button {
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 18px;
+    background-color: var(--dark-color);
+    border: 1px solid transparent;
+    color: white;
+    border-radius: 4px;
+    width: 100%;
+    padding: 1rem 2rem;
+    transition: 0.2s ease;
+    cursor: pointer;
+  }
+  .login_mobile-form button:hover {
+    background-color: transparent;
+    color: var(--dark-color);
+    border: 1px solid var(--dark-color);
+  }
+
+  .password_input {
+    width: 100%;
+    padding: 0.52rem 1rem;
+    border: 1px solid #cccccc;
+    background-color: #f8f8f8;
+    border-radius: 5px;
+    font-size: 16px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    overflow: hidden;
+  }
+
+  .password_input:focus-within {
+    outline: 1px solid var(--main-color);
+  }
+  .password_input input {
+    padding: 0;
+    border: none;
+  }
+  .password_input input:focus-within {
+    outline: none;
+  }
+  .iconsvgtwo {
+    color: var(--main-color);
+  }
+  .hideshow {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .form_inputs {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .rememberme {
+    margin-top: 1rem;
+    font-size: 14px;
+  }
+  .forgot_password {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+    font-size: 14px;
+    color: var(--opaque-color);
+    margin-bottom: 2rem;
+    padding-bottom: 2rem;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.322);
+  }
+  .orlogin {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+    justify-content: center;
+    font-size: 14px;
+    width: 100%;
+    color: var(--opaque-color);
+  }
+  .socials {
+    display: flex;
+    justify-content: center;
   }
 }
